[package]
name = "web-tools"
version = "0.3.0"
edition = "2024"

authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "Tools for the Web"
repository = "https://github.com/ctron/web-tools"
categories = ["wasm", "web-programming", "gui"]
keywords = ["yew", "tools", "web", "html"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
yew = { version = "0.22", optional = true }

[dependencies.web-sys]
version = "0.3.66"
features = [
    "Node",
    "NodeList",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlCollection",
    "HtmlInputElement",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
